Fixes site not working on mobile devices

--- a/styles/main.css
+++ b/styles/main.css
@@ -5,6 +5,11 @@
   padding: 0.2em 0;
 }
 
+html, body {
+  height: 100%;
+}
+
+
 body {
   padding: 0;
 }
@@ -35,16 +40,29 @@ body {
 }
 
 /* Custom page footer */
+#wrap {
+  min-height: 100%;
+}
+
+#main {
+  overflow:auto;
+  padding-bottom:150px; /* this needs to be bigger than footer height*/
+}
+
 .footer {
-  padding-top: 19px;
+  position: relative;
+  margin-top: -50px; /* negative value of footer height */
+  height: 50px;
+  clear:both;
+  padding-top:20px;
   color: #777;
   border-top: 1px solid #e5e5e5;
   background-color: rgba(248, 248, 248, .80);
   width:100%;
-  height:60px;
-  position:absolute;
-  bottom:0;
-  left:0;
+  /*height:60px;*/
+  /*position:absolute;*/
+  /*bottom:0;
+  left:0;*/
 }
 
 .container-narrow > hr {
